# data-encrypter

./: CMakeLists.txt  README.md
src/: FileHandling.cpp  FileHandling.hpp  data-encrypter.cpp
